      ProductDefinitionTroveNotFoundError, ProductDefinitionFileNotFound
      is now ProductDefinitionFileNotFoundError, and 
      InvalidSchemaVersionError has been added.
    * The sourceGroup element specifies the source from which a group
      is built.  New APIs have been added to produce and consume the
      sourceGroup element:
        ProductDefinition.getSourceGroup()
        ProductDefinition.setSourceGroup(sourceGroup)
        Build.getBuildSourceGroup()
      (RPCL-44)

  Bug Fixes:
    * Several platform attributes previously were not copied into a
      product definition during a rebase operation.  This has been
      fixed. (RPCL-48)

  o Schema Versions:
    * 2.0: Modifications required for RPCL-21, RPCL-44, sourceGroup

Changes in 0.3:
  Bug Fixes:
    * The rebase operation now succeeds when an explicit baseLabel
      is provided in the product definition. (RPCL-36)

Changes in 0.2:
  o API Changes:
    * Richer flavor support: for both platform and product, there are
      base flavor, image flavors, and architecture flavors that are
      mixed together to discover flavors of groups to cook and images
      to build. (RPCL-13)
    * When the default label prefix is not the label for a product,
      a different label prefix ("baseLabel") can be provided.  Stage
      suffixes will still be appended to this label. (RPCL-18)
    * Arbitrary label mappings can be provided for promote
      operations with "promoteMap" elements. (RPCL-17)

  o Schema Versions:
    * 1.2: Initial support for richer flavors (RPCL-13)
    * 1.3: Added baseLabel

Changes in 0.1:
  o API Changes:
    * proddef.py moved into rpath_common module.
    * More consistent API function and method naming: elem_dict
      changed to elementDict, elem_obj changed to elementObject,
      elem_list change to elementList.
    * API versioning added via explicit imports
    * Use rpath_common.xmllib instead of conary.lib.xmldata